[package]
name = "canticlec-churn"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard = "*"
eframe = "*"
egui = "*"
env_logger = "*"
log = "*"
pixels = "*"
rand = "*"
rfd = "*"
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"
serde = "*"
serde_json = "*"
tempfile = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
winit = "*"
winit_input_helper = "*"